# inserter-x

./: Cargo.toml  LICENSE  README.md  sample.env
examples/: benchmark.rs
src/: clickhouse.rs  common.rs  lib.rs  main.rs  mod.rs
src/sources/: mod.rs
src/utils/: mod.rs  tmp.rs
tests/: mod.rs  tools.rs
