[package]
name = "inserter-x"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = { version = "*", default-features = false }
arrow = { version = "55.1.0", default-features = false, features = [ "ffi" ] }
arrow-array = { version = "55.1.0", default-features = false }
arrow-ipc = { version = "55.1.0", default-features = false }
polars = { version = "0.48.1", default-features = false, features = [ "lazy", "csv", "fmt", "dtype-datetime" ] }
polars-arrow = { version = "0.48.1", default-features = false }
reqwest = { version = "0.12.19", default-features = false, features = [ "blocking" ] }
