[package]
name = "inserter-x"
version = "0.1.2"
edition = "2024"
description = "Copy or insert dataframes into databases (currently only Clickhouse)"
license = "MIT"
license-path = "./LICENSE"

[dependencies]
arrow = { version = "=53.4.0", default-features = false, features = [ "ffi" ] }
arrow-array = { version = "=53.4.0", default-features = false }
arrow-ipc = { version = "=53.4.0", default-features = false }
chrono = "=0.4.38"
polars = { version = "=0.45.1", default-features = false, features = [ "dtype-full" ] }
polars-arrow = { version = "=0.45.1", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
argh = "0.1.13"
polars = { version = "=0.45.1", default-features = false, features = [ "csv", "fmt", "polars-io", "json", "sql", "lazy" ] }
reqwest = { version = "0.12.19", features = [ "blocking" ] }

[[example]]
name = "insert-bench"
path = "examples/benchmark.rs"

